--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,8 @@
 @import "navbar";
 @import "buttons";
 @import "venue_card";
+@import "venue_form";
 @import "quizmaster_card";
 @import "bubbles";
 @import "separators";
+@import "testimonial_card";
