--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -74,20 +74,20 @@
 <div class="container">
   <div class="row align-items-center justify-content-evenly">
     <div class="testimonial-card col-4 col-md-3 col-lg-2">
-      <%= image_tag("quizmasters/1.jpg", alt: "Picture of Shuana Thompson from Multiplex ", class: "shuana-pic") %>
+      <%= image_tag("corporate/shauna_testimonal.png", alt: "Picture of Shauna Thomson from Multiplex ", class: "shuana-pic") %>
       <div class="testimonial-title-section testimonial-title-peach">
         <h4> MULTIPLEX </h4>
-        <p class="text-center">Shauna Thompson</p>
+        <p class="text-center">Shauna Thomson</p>
       </div>
     </div>
     <div class="text-bubble text-bubble-yellow col-6 col-md-7 col-lg-8">
       <p>
-        “Lorem ipsum dolor sit amet, consectetur
-          adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna, joe is wicked, Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit,
-          sed do eiusmod tempor incididunt ut labore et
-          dolore magna”
+        "Quizdog helped us with our annual charity fundraiser “A Night of Trivia”
+        and were so incredibly easy to work with and beyond friendly –
+        writing us a bespoke quiz and coming up with ideas to ensure the night was a success!
+        Joe had the room in stitches, and after raising an incredible £10K,
+        people were talking about the event for weeks! They were utterly fantastic,
+        and I could not recommend the Quizdog team enough."
       </p>
     </div>
   </div>
