--- a/app/views/pages/live_piano_karaoke.html.erb
+++ b/app/views/pages/live_piano_karaoke.html.erb
@@ -20,3 +20,7 @@
     <p>Please contact us for more info </p>
   </div>
 </div>
+
+<hr class="dividing-line-black">
+
+<p class="text-center">Please contact us for more information</p>
