--- a/app/views/pages/pubs.html.erb
+++ b/app/views/pages/pubs.html.erb
@@ -112,22 +112,23 @@
 <div class="container">
   <div class="row justify-content-evenly">
     <div class="testimonial-card col-4 col-md-3 col-lg-2">
-      <%= image_tag("pubs/20.jpg", alt: "Picture of Shuana Thompson from Multiplex ", class: "shuana-pic") %>
+      <%= image_tag("pubs/patrick_testimonal.png", alt: "Picture of Patrick McLean") %>
       <div class="testimonial-title-section testimonial-title-red">
-        <h4 class="title-align-center"> MOUNTAIN LAKES BREWERY - USA </h4>
+        <h4 class="title-align-center"> Patrcik McLean</h4>
+        <p class="align-left">Freelance Event Consultant (Formerly Head of Business Development at Zebrano Soho)<p>
       </div>
     </div>
     <div class="text-bubble text-bubble-yellow col-6 col-md-7 col-lg-8">
       <p>
-        “We've been using QuizDog in our taproom once a week
-        for over a year, and we've grown Thursday revenues into
-        something that nearly matches our weekend numbers. If
-        you're a business owner, you know that's amazing!
-        QuizDog makes it fun and easy to put on a weekly quiz in
-        your pub, whether you host it yourself, like me, or you
-        pass hosting duties onto someone else on your staff.
-        Bring your community together with QuizDog!”
-      </p>
+        “Working with Quizdog has been an absolute pleasure since day one.
+        The company’s founder Joe has a very hands-on approach, with a team whose creativity
+        ensures every occasion is nothing short of fantastic. Guests love their events,
+        whether it's a pub quiz, themed night or corporate bash and Quizdog's ability to specifically
+        tailor each one is exceptional. The company quickly became an integral part of our event
+        services during my time at Zebrano Soho, consistently delivering memorable experiences.
+        Their professionalism, energy and passion shine through in everything they create.
+        It's been a blast collaborating with them, and I look forward to many more successful
+        projects together.”
     </div>
   </div>
 </div>
