--- a/app/assets/stylesheets/pages/_corporate_karaoke.scss
+++ b/app/assets/stylesheets/pages/_corporate_karaoke.scss
@@ -8,7 +8,7 @@
   max-width: 150px;
 
   @include media(mobile) {
-    max-width: 200px;
+    max-width: 150px;
   }
 
   @include media(laptop) {
@@ -26,7 +26,7 @@
   margin-left: -2rem;
   z-index: 1;
 
-  @include media(mobile) {
+  @include media(tablet) {
     margin-top: -10rem;
     margin-left: -3rem;
   }
