--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="quizzing-dogs-image-container col-sm-0 col-md-6 col-lg-6">
-      <%= image_tag("about_us/10.png", alt: "three quizmasters posing on stage") %>
+      <%= image_tag("about_us/10.jpg", alt: "three quizmasters posing on stage") %>
     </div>
   </div>
 </div>
