--- a/app/assets/stylesheets/components/_quizmaster_card.scss
+++ b/app/assets/stylesheets/components/_quizmaster_card.scss
@@ -23,11 +23,9 @@
     text-align: justify;
   }
 
-  > p {
-    width: 60%;
-    text-align: justify;
+  .text-bubble p {
     margin-bottom: 5px;
-  }
+ }
 }
 
 .quizmaster-venues {
