--- a/app/views/quizmasters/_quizmaster.html.erb
+++ b/app/views/quizmasters/_quizmaster.html.erb
@@ -1,8 +1,10 @@
 <div class="quizmaster-card col-6 col-md-4 col-lg-3">
   <%= cl_image_tag quizmaster.photo.key if quizmaster.photo.key %>
   <h4><%= quizmaster.name %></h4>
-  <div class="text-bubble text-bubble-peach">
-    <p><%= quizmaster.profile %></p>
+  <div class="text-bubble text-bubble-peach d-flex flex-column">
+    <p class="mb-3"><strong>Record </strong><%= quizmaster.record %></p>
+    <p class="mb-3"> <strong>Fact </strong><%= quizmaster.fact %></p>
+    <p><strong>Breed </strong><%= quizmaster.breed %></p>
   </div>
 
   <% if admin_page %>
