--- a/app/views/pages/live_piano_karaoke.html.erb
+++ b/app/views/pages/live_piano_karaoke.html.erb
@@ -4,12 +4,12 @@
   </div>
 </div>
 
-<div class="container d-flex justify-content-center">
+<div class="container d-flex justify-content-left">
   <h1>GET YOUR KNEES UP AND STEP IN TIME!</h1>
 </div>
 
-<div class="container">
-  <div class="text-bubble text-bubble-orange">
+<div class="container d-flex">
+  <div class="text-bubble text-bubble-orange col-9">
     <p>We’ve got something really special for you here. A karaoke night with a difference.
       The Singalong Speakeasy is a night like no other. Our incredibly talented sight-
       reading pianist will play whatever you like for the most personal and memorable
@@ -19,8 +19,13 @@
     <p class="empty-line"></p>
     <p>Please contact us for more info </p>
   </div>
+  <div class="singing-mouth-container col-3">
+    <%= image_tag "karaoke/26.png", class: "img-fluid singing-mouth" %>
+  </div>
 </div>
 
 <hr class="dividing-line-black">
 
 <p class="text-center">Please contact us for more information</p>
+
+<div class="empty-space-responsive"></div>
