--- a/app/views/quizmasters/_quizmaster.html.erb
+++ b/app/views/quizmasters/_quizmaster.html.erb
@@ -8,6 +8,8 @@
   </div>
 
   <% if admin_page %>
-   <%= link_to "Edit", quizmaster_path(quizmaster), class: "primary-button"  %>
+   <%= link_to "Quizmaster page", quizmaster_path(quizmaster), class: "primary-button text-decoration-underline"  %>
   <% end %>
 </div>
+
+<div class="empty-space-responsive"></div>
