Hamburger menu fix Link to access quizdex now links to right part of pubs page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
         <%= link_to "Quizzing", root_path(anchor: 'quizzing-section'), class: "dropdown-item" %>
         <%= link_to "Karaoke", root_path(anchor: 'karaoke-section'), class: "dropdown-item" %>
         <%= link_to "Who we are", root_path(anchor: 'who-we-are-section'), class: "dropdown-item" %>
-        <%= link_to "Access Quizdex", "#{root_path}#contact-section", class: "dropdown-item" %>
+        <%= link_to "Access Quizdex", pubs_path(anchor: 'host-your-own'), class: "dropdown-item" %>
         <%= link_to "Contact Us", contact_us_path, class: "dropdown-item" %>
       </div>
   </div>
