--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -12,9 +12,6 @@
     </div>
   </div>
   <% if admin_page %>
-    <div class="admin-cards-buttons">
-      <%= link_to "Edit", edit_venue_path(venue), class: "btn btn-primary"%>
-      <%= link_to "Delete", venue_path(venue), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
-    </div>
+    <%= link_to "Quizmaster page", venue_path(venue), class: "primary-button text-decoration-underline" %>
   <% end %>
 </div>
