Changed link wording - from quizmaster page to venue page - restyled show pages to make them more consistent

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -52,3 +52,13 @@
   border-radius: 10px;
   background-color: $red;
 }
+
+.quizmaster-admin-button {
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.venue-admin-button {
+  margin-top: -1.5rem;
+  margin-bottom: 1rem;
+}
