--- a/app/views/quizmasters/show.html.erb
+++ b/app/views/quizmasters/show.html.erb
@@ -1,24 +1,15 @@
 <div class="container admin-quizmaster-show-container d-flex flex-column align-items-center">
-  <div class="quizmaster-card col-6 col-md-4 col-lg-3">
+  <div class="quizmaster-card col-6 col-md-4 col-lg-3 mb-4">
   <%= image_tag @quizmaster.photo if @quizmaster.photo.attached? %>
-  <h4><%= @quizmaster.name %></h4>
-  <div class="text-bubble text-bubble-peach">
-    <p>Record: <%= @quizmaster.record %></p>
-    <p>Fact: <%= @quizmaster.fact %></p>
-    <p>Dog breed: <%= @quizmaster.breed %></p>
-  </div>
-  <div class="quizmaster-venues">
-    <h6><%= @quizmaster.name %>'s PUBS</h6>
-    <% if @quizmaster.venues.empty? %>
-      <p>No pubs yet.</p>
-    <% else %>
-      <% @quizmaster.venues.each do |venue| %>
-        <p><%= venue.name %></p>
-      <% end %>
-    <% end %>
-  </div>
-  <div class="admin-quizmaster-buttons">
-    <%= link_to "Edit", edit_quizmaster_path(@quizmaster), class: "btn btn-primary dog-button-yellow" %>
-    <%= link_to "Delete", quizmaster_path(@quizmaster), class: "btn btn-danger dog-button-red", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+    <h4><%= @quizmaster.name %></h4>
+    <div class="text-bubble text-bubble-peach d-flex flex-column">
+      <p class="mb-3"><strong>Record: </strong><%= @quizmaster.record %></p>
+      <p class="mb-3"><strong>Fact: </strong><%= @quizmaster.fact %></p>
+      <p><strong>Breed: </strong><%= @quizmaster.breed %></p>
+    </div>
+    <div class="quizmaster-admin-button">
+      <%= link_to "Edit", edit_quizmaster_path(@quizmaster), class: "btn btn-primary" %>
+      <%= link_to "Delete", quizmaster_path(@quizmaster), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+    </div>
   </div>
 </div>
