--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container" data-controller="tabs">
   <h1 class="d-flex justify-content-center mb-1">QUIZDOG ADMIN</h1>
   <div class="w-20 d-flex justify-content-center">
     <%= link_to "Log out", destroy_user_session_path, class: "btn btn-danger top-buttons", data: {turbo_method: :delete} %>
@@ -7,10 +7,10 @@
   <%# VENUES TAB SECTION %>
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"><h6>Venues</h6></button>
+      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" data-action="tabs#setActiveTab" data-tabs-target="tab"><h6>Venues</h6></button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"><h6>Quizmasters</h6></button>
+      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false" data-action="tabs#setActiveTab" data-tabs-target="tab"><h6>Quizmasters</h6></button>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
