Add recaptcha to contact_us form - Add gem recaptcha - Set the site key and secret key - Add logic in the messages controller - Add recaptcha check in contact us form

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -16,6 +16,9 @@
         <%= form.input :email %>
         <%= form.input :number %>
         <%= form.input :message %>
+
+        <%= recaptcha_tags %>
+
         <div class="d-flex justify-content-center">
           <%= form.button :submit, "Send Message", class: "btn button-rounded-red" %>
         </div>
