--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -11,14 +11,13 @@
 <div class="container">
   <div class="row justify-content-center align-items-center">
     <div class="col-sm-12 col-md-6 col-lg-4 form-container">
-      <%= simple_form_for @message do |form| %>
+      <%= simple_form_for @message, data: { turbo: false } do |form| %>
         <%= form.input :name %>
         <%= form.input :email %>
         <%= form.input :number %>
         <%= form.input :message %>
 
         <%= recaptcha_tags %>
-
         <div class="d-flex justify-content-center">
           <%= form.button :submit, "Send Message", class: "btn button-rounded-red" %>
         </div>
