--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container">
-  <div class="row justify-content-center align-items-center">
+  <div class="row justify-content-center align-items-start">
     <div class="col-sm-12 col-md-6 col-lg-4 form-container">
       <%= simple_form_for @message, data: { turbo: false } do |form| %>
         <%= form.input :name %>
@@ -17,15 +17,15 @@
         <%= form.input :number %>
         <%= form.input :message %>
 
-        <%= recaptcha_tags %>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex flex-column align-items-center">
+          <%= recaptcha_tags %>
           <%= form.button :submit, "Send Message", class: "btn button-rounded-red" %>
         </div>
       <% end %>
       <div class="empty-space-responsive"></div>
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-4 text-bubble text-bubble-red d-flex flex-column justify-content-center social-message-container">
+    <div class="col-sm-12 col-md-6 col-lg-4 text-bubble text-bubble-red d-flex flex-column justify-content-center social-message-container mt-4">
       <%= render "pages/partials/social_media" %>
       <p class="empty-line"></p>
       <p>
