Add list of gigs to quizmaster and venue show page

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -59,6 +59,10 @@
 }
 
 .venue-admin-button {
-  margin-top: -1.5rem;
+  margin-top: 5px;
   margin-bottom: 1rem;
+}
+
+.venue-page-show-button {
+  margin-top: -1.5rem;
 }
