--- a/app/assets/stylesheets/pages/_admin.scss
+++ b/app/assets/stylesheets/pages/_admin.scss
@@ -27,3 +27,14 @@
 .admin-quizmaster-show-container {
   margin-top: 1rem;
 }
+
+.gigs-styles {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin-top: 5px;
+}
+
+.venue-card-admin-page {
+  margin-bottom: 5px;
+}
