--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="d-flex justify-content-center">
     <% if admin_page %>
-      <%= link_to "Venue page", venue_path(venue), class: "btn dog-button-yellow venue-admin-button" %>
+      <%= link_to "Venue page", venue_path(venue), class: "btn dog-button-yellow venue-page-show-button" %>
     <% end %>
   </div>
 </div>
