Add favicon Add background pic private page

--- a/app/views/pages/private.html.erb
+++ b/app/views/pages/private.html.erb
@@ -55,4 +55,4 @@
   </div>
 </div>
 
-<%= image_tag "private/12.jpg", class: "private-dogs-image", alt: "a group of dogs enjoying a party with balloons" %>
+<%= image_tag "private/12.png", class: "private-dogs-image", alt: "a group of dogs enjoying a party with balloons" %>
