--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -29,7 +29,7 @@
 <hr class="dividing-line-black">
 
 <div class="container d-flex justify-content-center">
-  <h3>WHO WE HAVE HOSTED FOR</h3>
+  <h3>WHO WE HAVE WORKED WITH</h3>
 </div>
 
 <div class="logos">
