Add contact us links

--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -133,9 +133,9 @@
         person, the other half playing online.
       </p>
       <p class="empty-line"></p>
-      <p>
-        For more information, please contact us.
-      </p>
+      <div class="d-flex justify-content-center">
+        <%= link_to "Contact Us", contact_us_path %>
+      </div>
     </div>
   </div>
 </div>
