--- a/app/views/pages/corporate_karaoke.html.erb
+++ b/app/views/pages/corporate_karaoke.html.erb
@@ -26,6 +26,8 @@
 
 <hr class="dividing-line-black">
 
-<p class="text-center">Please contact us for more information</p>
+<div class="d-flex justify-content-center">
+  <%= link_to "Contact Us", contact_us_path %>
+</div>
 
 <div class="empty-space-responsive"></div>
