--- a/app/views/pages/live_piano_karaoke.html.erb
+++ b/app/views/pages/live_piano_karaoke.html.erb
@@ -16,8 +16,6 @@
       karaoke experience you’ll have. Guaranteed to descend into one enormous
       singalong by the end of the night.
     </p>
-    <p class="empty-line"></p>
-    <p>Please contact us for more info </p>
   </div>
   <div class="singing-mouth-container col-3">
     <%= image_tag "karaoke/26.png", class: "img-fluid singing-mouth" %>
@@ -26,6 +24,7 @@
 
 <hr class="dividing-line-black">
 
-<p class="text-center">Please contact us for more information</p>
-
+<div class="d-flex justify-content-center">
+  <%= link_to "Contact Us", contact_us_path %>
+</div>
 <div class="empty-space-responsive"></div>
