Changed copy on home page Add contact us link to private page Add testimonial to pubspage

--- a/app/assets/stylesheets/pages/_private.scss
+++ b/app/assets/stylesheets/pages/_private.scss
@@ -43,4 +43,16 @@
   width: 100%;
   height: auto;
   margin-top: -1rem;
+
+  @include media(mobile) {
+    margin-top: -2rem;
+  }
+
+  @include media(laptop) {
+    margin-top: -3rem;
+  }
+
+  @include media(desktop) {
+    margin-top: -3rem;
+  }
 }
