--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -19,7 +19,7 @@
 
         <div class="d-flex flex-column align-items-center">
           <%= recaptcha_tags %>
-          <%= form.button :submit, "Send Message", class: "btn button-rounded-red" %>
+          <%= form.button :submit, "Send Message", class: "btn button-rounded-red mt-2" %>
         </div>
       <% end %>
       <div class="empty-space-responsive"></div>
