--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
       <% end %>
       <%= link_to pubs_path(anchor: "join-us-at-your-pub") do %>
         <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-          <h5 class="btn-red">START A QUIZ!</h5>
+          <h5 class="btn-red">START A QUIZ</h5>
         </div>
       <% end %>
       <%= link_to pubs_path(anchor: "host-your-own") do %>
