--- a/app/views/pages/private.html.erb
+++ b/app/views/pages/private.html.erb
@@ -25,7 +25,7 @@
       </p>
       <p class="empty-line"></p>
       <p>
-        Contact us for rates and further details.
+         <%= link_to "Contact Us", contact_us_path %> for rates and further details.
       </p>
     </div>
   </div>
