--- a/app/views/pages/pubs.html.erb
+++ b/app/views/pages/pubs.html.erb
@@ -102,21 +102,7 @@
 
 <div class="dividing-line-black"></div>
 
-<div class="container access-quizdex-section" id="host-your-own">
-  <h3>HOST YOUR OWN - ACCESS QUIZDEX</h3>
-  <div class="text-bubble text-bubble-yellow">
-    <p>
-      Above everything here at Quiz Dog, the thing we are most proud of is our amazing team of passionate
-      Quizmasters. However, we understand that margins are tight at the minute and sometimes cost cutting
-      is not preferred, but a necessity. Well, we have you covered.
-    </p>
-  </div>
-</div>
-
-<div class="empty-space-responsive"></div>
-
-<div class="container">
-  <div class="row justify-content-evenly">
+<div class="row justify-content-evenly">
     <div class="testimonial-card col-4 col-md-3 col-lg-2">
       <%= image_tag("pubs/patrick_testimonal.png", alt: "Picture of Patrick McLean") %>
       <div class="testimonial-title-section testimonial-title-red">
@@ -135,6 +121,42 @@
         Their professionalism, energy and passion shine through in everything they create.
         It's been a blast collaborating with them, and I look forward to many more successful
         projects together.”
+    </div>
+  </div>
+
+<div class="dividing-line-black"></div>
+
+<div class="container access-quizdex-section" id="host-your-own">
+  <h3>HOST YOUR OWN - ACCESS QUIZDEX</h3>
+  <div class="text-bubble text-bubble-yellow">
+    <p>
+      Above everything here at Quiz Dog, the thing we are most proud of is our amazing team of passionate
+      Quizmasters. However, we understand that margins are tight at the minute and sometimes cost cutting
+      is not preferred, but a necessity. Well, we have you covered.
+    </p>
+  </div>
+</div>
+
+<div class="empty-space-responsive"></div>
+
+<div class="container">
+  <div class="row justify-content-evenly">
+    <div class="testimonial-card col-4 col-md-3 col-lg-2">
+      <%= image_tag("pubs/20.jpg", alt: "Picture of Patrick McLean") %>
+      <div class="testimonial-title-section testimonial-title-red">
+        <h4 class="title-align-center"> Mountain Lakes Brewery - USA</h4>
+      </div>
+    </div>
+    <div class="text-bubble text-bubble-yellow col-6 col-md-7 col-lg-8">
+      <p>
+        “We've been using QuizDog in our taproom once a week
+        for over a year, and we've grown Thursday revenues into
+        something that nearly matches our weekend numbers. If
+        you're a business owner, you know that's amazing!
+        QuizDog makes it fun and easy to put on a weekly quiz in
+        your pub, whether you host it yourself, like me, or you
+        pass hosting duties onto someone else on your staff.
+        Bring your community together with QuizDog!”
     </div>
   </div>
 </div>
