--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container d-flex justify-content-center">
-  <h2 class="text-align-center">CARBON (PAW)FOOTPRINT</h2>
+  <h2 class="text-align-center">CARBON PAWPRINT</h2>
 </div>
 
 <div class="container container-anchor-top">
